--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,19 @@
 [package]
-authors = ["Marcel Müller <neikos@neikos.email>"]
+authors = [
+    "Marcel Müller <neikos@neikos.email>",
+    "DecDuck <declanahofmeyr@gmail.com>",
+]
 categories = ["database-implementations"]
 description = "A modular and configurable database"
 documentation = "https://docs.rs/rustbreak"
 edition = "2018"
-homepage = "https://github.com/TheNeikos/rustbreak"
+homepage = "https://github.com/Drop-OSS/dropbreak"
 keywords = ["database", "simple", "fast", "rustbreak"]
 license = "MPL-2.0"
-name = "rustbreak"
+name = "dropbreak"
 readme = "README.md"
-repository = "https://github.com/TheNeikos/rustbreak"
-version = "2.0.0"
+repository = "https://github.com/Drop-OSS/dropbreak"
+version = "2.0.0-drop"
 
 [package.metadata.docs.rs]
 all-features = true
@@ -19,6 +22,10 @@ all-features = true
 serde = "1"
 tempfile = "3"
 thiserror = "1.0.20"
+
+[dependencies.tokio]
+version = "1.46.1"
+features = ["sync", "rt", "macros", "fs", "io-util"]
 
 [dependencies.ron]
 optional = true
@@ -49,10 +56,9 @@ lazy_static = "1"
 serde_derive = "1"
 
 [features]
-default = []
+default = ["ron_enc"]
 ron_enc = ["ron"]
 bin_enc = ["bincode", "base64"]
 yaml_enc = ["serde_yaml"]
 other_errors = ["anyhow"]
 mmap = ["memmap"]
-
